--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p><b> Вторая страница </b></p>
-<a href=yaazzik.github.io> Главная страница </a>
+<a href=https://yaazzik.github.io> Главная страница </a>
